# ScopeCore

./: .gitmodules  CMakeLists.txt  Portable.h  README.md  Scope.cpp  ScopeGUI.cpp  ScopeGUI.h  ScopeMCU.cpp  ScopeMCU.h  noncopyable.h
.github/workflows/: build.yml
